--- a/Data/splitrinex-BERTRIX.conf
+++ b/Data/splitrinex-BERTRIX.conf
@@ -1,7 +1,8 @@
 [GLOBAL]
 Verbose = true
 Rinex directory = /home/amuls/enc/GNSSDATA/GENA/MxCx-Canada-201408/20140819-Tuesday-GPS-BELGIUM/rinex
-Rinex observation file = abcd
+Rinex observation file = /home/amuls/BERTRIX/DATA/15337/BRTX3370.15o
+
 [SPLIT]
 1\start = 10:25:00
 1\duration =
